--- a/dox-theme/_sass/settings/_core.scss
+++ b/dox-theme/_sass/settings/_core.scss
@@ -7,6 +7,7 @@ $dox-color-dark: #1c1d1b;
 $dox-color-light: #f2f3f2;
 $dox-color-warning: #ad0000;
 $dox-color-highlight: #ffd300;
+$dox-color-dark-gray: #2d3b44; // Added brand dark gray
 
 // UI State Colors
 $color-info: #3498db;    // Blue for information
